<resources>
    <string name="app_name">Mathome</string>
    <string name="username">Teléfono, usuario o correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar Sesión</string>
    <string name="forget">¿Olvidaste tu contraseña?</string>
    <string name="create_account">Crear cuenta nueva</string>
    <string name="tituloEmpezar">Únete a Mathome</string>
    <string name="mensajeEmpezar">Te ayudamos a crear una cuenta en unos pocos pasos.</string>
    <string name="btnEmpezar">Empezar</string>
    <string name="tienes_cuenta">¿Ya tienes una cuenta?</string>
    <string name="nombre">Nombre</string>
    <string name="como_te_llamas">¿Cómo te llamas?</string>
    <string name="apellido">Apellido</string>
    <string name="btnSiguiente">Siguiente</string>
    <string name="cuando_naciste">¿Cuándo naciste?</string>
    <string name="error_nombre">Debes ingresar tu nombre.</string>
    <string name="error_apellido">Debes ingresar tu apellido.</string>
    <string name="nivel_de_estudio">¿Cuál es tu nivel de estudio?</string>
    <string name="conexion">No tienes conexión a internet.</string>
    <string name="error_nivel_estudio">Debe seleccionar su nivel de estudio</string>
    <string name="correo_electronico">¿Cuál es tu correo electrónico?</string>
    <string name="usar_telefono">Usar tu número de celular</string>
    <string name="ingresar_correo">Ingresa tu correo electrónico</string>
    <string name="numero_celular">¿Cuál es tu número de teléfono?</string>
    <string name="ingresar_telefono">Ingresa tu número de teléfono</string>
    <string name="usar_correo">Usar tu correo electrónico</string>
    <string name="titulo_genero">¿Con qué género te identificas?</string>
    <string name="mujer">Mujer</string>
    <string name="hombre">Hombre</string>
    <string name="personalizado">Personalizado</string>
    <string name="ingresar_genero">Ingresa tu género</string>
    <string name="ingresar_fechaNacimiento">Debe ingresar su fecha de nacimiento</string>
    <string name="fecha_nacimiento_valida">Ingresa una fecha de nacimiento válida.</string>
    <string name="seleccionar_genero">Por favor selecciona tu género.</string>
    <string name="crear_clave">Crea una contraseña</string>
    <string name="finalizar_registro">Finaliza el registro</string>
    <string name="terminos_condiciones">Al tocar \"Registrarte\", aceptas nuestras Condiciones y la Política de datos.</string>
    <string name="registrate">Registrarte</string>
    <string name="creando">Creando tu cuenta</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="seleccionar_pais">Seleccionar pais</string>
    <string name="buscar">Buscar...</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="itemHome">Inicio</string>
    <string name="itemSearch">Buscar</string>
    <string name="itemHomework">Tarea</string>
    <string name="itemNotification">Notificaciones</string>
    <string name="itemAccount">Cuenta</string>
    <string name="seleccionar">SELECCIONAR</string>
    <string name="no_decir">Prefiero no decir</string>
    <string name="error_correo">Debe ingresar un correo electrónico válido</string>
    <string name="error_correo_exist">El correo electrónico ya existe</string>
    <string name="error_clave">La contraseña debe tener 6 caracteres como mínimo</string>
    <string name="error_telefono">Debe ingresar un número de teléfono</string>
    <string name="ninguno">Ninguno</string>
    <string name="error_telefono_exist">El teléfono ya se encuentra registrado</string>
    <string name="clave_incorrecta">Contraseña incorrecta</string>
    <string name="no_existe_cuenta">No existe la cuenta</string>
</resources>
